--- a/src/components/rooms/room.css
+++ b/src/components/rooms/room.css
@@ -16,6 +16,12 @@
     align-items: center;
   }
 
+  .itemList {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
   li > button{
     background: black;
     color: white;
